# kafka-flink-order-pipeline

./: .env.example  .gitignore  LICENSE  README.md  producer.py  pyproject.toml  requirements.txt
flink/: enrichment.sql  facility_metrics.sql  ml_features.sql
schemas/: order_event.avsc
